--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,26 +2,91 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+body{
+  background: #2F8EBBCC;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+input[type=text]{
+  /* border-color: black; */
+  border-width: 1px;
+  border-radius: 5px;
+  padding: 1rem;
+  height: 2.7rem;
+  /* text-align: center; */
+  outline:none;
+  box-shadow: inset 0 0px 2px 0 rgba(0, 0, 0, 0.2);
+}
+input[type=text]:focus{
+  border-color: black;
+  box-shadow: none;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+input[type=password]{
+  /* border-color: black; */
+  border-width: 1px;
+  border-radius: 5px;
+  padding: 1rem;
+  height: 2.7rem;
+  /* text-align: center; */
+  outline:none;
+  box-shadow: inset 0 0px 2px rgba(0, 0, 0, 0.2);
+}
+
+input[type=password]:focus{
+  border-color: black;
+  box-shadow: none;
+}
+
+input[type=date]{
+  /* border-color: black; */
+  border-width: 1px;
+  border-radius: 5px;
+  padding: 1rem;
+  height: 2.7rem;
+  /* text-align: center; */
+  outline:none;
+  box-shadow: inset 0 0px 2px rgba(0, 0, 0, 0.2);
+}
+
+input[type=date]:focus{
+  border-color: black;
+  box-shadow: none;
+}
+
+.submit{
+  background-color: #2F8EBB;
+  /* width: 11rem; */
+  height: 2.625rem;
+  width: 15rem;
+  color: #ffff;
+  /* border-radius: 9999px; */
+  font-weight: 600;
+  border-radius: 3px;
+
+  transition: all 300ms ease-in-out;
+
+}
+
+.submit:hover{
+  background-color: #2a7fa6;
+}
+
+.forgotPassword{
+  /* width: 11rem; */
+  height: 2.625rem;
+  width: 15rem;
+  border-width: 1px;
+  /* border-radius: 9999px; */
+  border-color: #2F8EBB;
+  font-weight: 600;
+  border-radius: 3px;
+  color: #2F8EBB;
+
+  transition: all 300ms ease-in-out;
+
+}
+
+.forgotPassword:hover{
+  background-color: #2a7fa6;
+  color: white;
 }
